--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "type": "module",
 
   "scripts": {
-    "predeploy":"npm run build",
 
+    "predeploy": "npm run build",
 
-    "deploy":"gh-pages -d dist",
-
+    "deploy": "gh-pages -d dist",
 
     "dev": "vite",
 
@@ -35,7 +34,9 @@
 
     "react-dom": "^18.2.0",
 
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+
+    "react-router-dom": "^6.25.1"
 
   },
 
